# wordle_giorgianni_sofia

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/wordle_sg1234/: __init__.py
src/wordle_sg3925/: __init__.py  wordle_sg3925.py
tests/: test_wordle_sg1234.py  test_wordle_sg3925.py
