[tool.poetry]
name = "wordle_sg1234"
version = "0.1.0"
description = "Wordle helper functions (HW07)"
authors = ["Sofia Giorgianni"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
